deploy-repo/environments/prod/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-blue
spec:
  template:
    spec:
      containers:
        - name: my-app
          image: myrepo/myapp:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-green
spec:
  template:
    spec:
      containers:
        - name: my-app
          image: myrepo/myapp:1.0.0
