deploy-repo/environments/prod/traffic.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-active
spec:
  selector:
    color: blue
